fix: адаптация с java.nio  java.util.Scanner.